# stars-h

./: .gitattributes  .gitmodules  CMakeLists.txt  COPYRIGHTS.txt  Data.md  INSTALL  Jenkinsfile  Makefile  Makefile.intel  README.md  acoustic_8c.html  acoustic_8c.js  acoustic_8c__incl.map  acoustic_8c__incl.md5  annotated.html  annotated_dup.js  apps.html  array_8c.html  array_8c.js  array_8c__incl.map  array_8c__incl.md5  blrf_8c.html  blrf_8c.js  blrf_8c__incl.map  blrf_8c__incl.md5  blrm_8c.html  blrm_8c.js  blrm_8c__incl.map  blrm_8c__incl.md5  cauchy_8c.html  cauchy_8c.js  cauchy_8c__incl.map  cauchy_8c__incl.md5  cg_8c.html  cg_8c.js  cg_8c__incl.map  cg_8c__incl.md5  classes.html  cluster_8c.html  cluster_8c.js  (+801 more)
C-core/: block_lowrank.c  block_lowrank.h  blr.c  blr.h  generator.c  kernel.c  kernel.h  makefile  misc.c  misc.h  run.c
Python/: Gen_matrix.ipynb  README.md
SARS-CoV-2-meshes/: GeneratePopulation.py  GeneratePopulationSphere.py  GeneratePopulationSpherePacking_fixedlen.py  HierarchicalPopulationCluster.py
cmake_modules/: GenPkgConfig.cmake  PrintOpts.cmake
examples/: CMakeLists.txt  rndtiled.c  sequential.c  spatial.c  spatial1d.c
examples/approximation/: CMakeLists.txt  dense.c  minimal.c  randtlr.c  rndtiled.c  spatial.c
examples/problem/: CMakeLists.txt  acoustic.c  dense.c  minimal.c  particles.c  particles.txt  randtlr.c  rbf.c  rbf_cube.c  rbf_virus.c  rndtiled.c  spatial.c  spatial_bivariate.c  spatial_non_gaussian.c
include/: CMakeLists.txt  common.h  misc.h  stars-astronomy.h  stars-electrostatics.h  stars-misc.h  stars-spatial.h  stars.h  starsh-acoustic.h  starsh-cauchy.h  starsh-constants.h  starsh-electrodynamics.h  starsh-electrostatics.h  starsh-minimal.h  starsh-mpi-starpu-kblas.h  starsh-mpi-starpu.h  starsh-mpi.h  starsh-particles.h  starsh-plasma.h  starsh-randtlr.h  starsh-rbf.h  starsh-rndtiled.h  starsh-spatial-gsl.h  starsh-spatial.h  starsh-starpu-cuda.h  starsh-starpu-kblas.h  starsh-starpu.h  starsh.h
include/applications/: particles.h
include/control/: init.h
src/: CMakeLists.txt  Makefile  array.c  astronomy.c  blr.c  blrf.c  blrm.c  cluster.c  electrostatics.c  misc.c  problem.c  run.sh  spatial.c
src/applications/: CMakeLists.txt  cauchy.c  common.c  electrodynamics.c  electrostatics.c  minimal.c  particles.c  randtlr.c  rndtiled.c  spatial.c
src/applications/acoustic/: acoustic.c  mesh_acoustic.c
src/applications/acoustic/acoustic-kernel/: frequency.f90  global_com.f90  hard_nys.f90  inci_rhs.f90  near_scafield.f90
src/applications/electrodynamics/: CMakeLists.txt  kernel_cos.c  kernel_helmholtz_cos.c  kernel_helmholtz_sin.c  kernel_sin.c
src/applications/electrostatics/: CMakeLists.txt  kernel_coulomb_potential.c
src/applications/mesh_deformation/: cube.c  kernels_rbf.c  mesh_rbf.c  virus.c
src/applications/spatial/: CMakeLists.txt  kernel_exp.c  kernel_matern.c  kernel_matern2.c  kernel_sqrexp.c
src/backends/: CMakeLists.txt
src/backends/mpi/: CMakeLists.txt
src/backends/mpi/blrm/: CMakeLists.txt  dfe.c  dmml.c  dna.c  dqp3.c  drsdd.c  dsdd.c
src/backends/mpi_starpu/: CMakeLists.txt
src/backends/mpi_starpu/blrm/: CMakeLists.txt  dfe.c  dmml.c  dna.c  dqp3.c  drsdd.c  dsdd.c
src/backends/mpi_starpu_kblas/: CMakeLists.txt
src/backends/mpi_starpu_kblas/blrm/: CMakeLists.txt  drsdd.c
src/backends/mpi_starpu_kblas2/: CMakeLists.txt
src/backends/mpi_starpu_kblas2/blrm/: drsdd.c
src/backends/mpi_starpu_kblas3_spatial/: CMakeLists.txt
src/backends/mpi_starpu_kblas3_spatial/blrm/: drsdd.c
src/backends/omp/: CMakeLists.txt  blrm.c
src/backends/omp/blrm/: CMakeLists.txt  dqp3.c  drsdd.c  drsdd2.c  dsdd.c
src/backends/openmp/: CMakeLists.txt
src/backends/openmp/blrm/: CMakeLists.txt  dfe.c  dmml.c  dqp3.c  drsdd.c  drsdd2.c  dsdd.c
src/backends/sequential/: CMakeLists.txt  blrm.c  dsvfr.c  dtlrmm.c  dtlrsdd.c
src/backends/sequential/blrm/: CMakeLists.txt  dca.c  dfe.c  dmml.c  dqp3.c  drsdd.c  drsdd2.c  dsdd.c
src/backends/sequential/dense/: CMakeLists.txt  dna.c  dqp3.c  drsdd.c  drsdd2.c  dsdd.c  dsvfr.c  zrsdd.c
src/backends/sequential/kernels/: CMakeLists.txt  dna.c  dqp3.c  drsdd.c  drsdd2.c  dsdd.c  dsvfr.c
src/backends/starpu/: CMakeLists.txt  blrm.c
src/backends/starpu/blrm/: CMakeLists.txt  dmml.c  dqp3.c  drsdd.c  drsdd2.c  dsdd.c
src/backends/starpu/dense/: CMakeLists.txt  dgemm.c  dqp3.c  drsdd.c  dsdd.c  fake_init.c  kernel.c
src/backends/starpu/kernels/: CMakeLists.txt  dqp3.c  drsdd.c  drsdd2.c  dsdd.c
src/backends/starpu_cuda/: CMakeLists.txt
src/backends/starpu_cuda/blrm/: drsdd.c
src/backends/starpu_cuda/dense/: CMakeLists.txt  drsdd.c  kernel.c
src/backends/starpu_kblas/: CMakeLists.txt
src/backends/starpu_kblas/blrm/: CMakeLists.txt  drsdd.c
src/backends/starpu_kblas/dense/: drsdd.c  kernel.c
src/backends/starpu_kblas2/: CMakeLists.txt
src/backends/starpu_kblas2/blrm/: drsdd.c
src/backends/starpu_kblas2/dense/: drsdd.c  kernel.c
src/backends/starpu_kblas3_spatial/: CMakeLists.txt
src/backends/starpu_kblas3_spatial/blrm/: drsdd.c
src/backends/starpu_kblas3_spatial/dense/: CMakeLists.txt  kernel.cu
src/control/: CMakeLists.txt  array.c  blrf.c  blrm.c  cluster.c  init.c  problem.c
src/itersolvers/: CMakeLists.txt  cg.c
src/unfinished/: hpartitioning.c  hpartitioning.h  particles.c
testing/: CMakeLists.txt  Draw heatmaps.ipynb  Makefile  array.c  astronomy.c  astronomy.h  atm-params.txt  cauchy.c  electrodynamics.c  electrostatics.c  minimal.c  mpi.c  mpi3d.c  mpi3d_solve.c  mpi_cauchy.c  mpi_electrodynamics.c  mpi_electrostatics.c  mpi_minimal.c  mpi_na.c  mpi_solve.c  mpi_spatial.c  mpi_starpu_cauchy.c  mpi_starpu_electrodynamics.c  mpi_starpu_electrostatics.c  mpi_starpu_minimal.c  mpi_starpu_spatial.c  mpi_starpu_spatial_gpu.c  ompbatch.c  ompfor.c  particles.c  particles.txt  problem.c  randtlr.c  rndtiled.c  sequential.c  spatial.c  spatial_heatmap.c  spatial_performance.c  starpu.c  starpu_cauchy.c  (+7 more)
testing/plasma/: solve.c
testing/spatial_performance/: Untitled.ipynb  params.txt  result.txt  run.sh
(+157 files in other folders)
